// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test \`FileNotFoundError\` own keys 1`] = `
Array [
  "stack",
  "_fileName",
]
`;

exports[`Test \`FileNotFoundError\` own keys 2`] = `
Array [
  "stack",
  "message",
  "_fileName",
]
`;

exports[`Test \`FileNotFoundError\` own keys 3`] = `
Array [
  "stack",
  "message",
  "_fileName",
]
`;

exports[`Test \`FileNotFoundError\` own keys 4`] = `
Array [
  "stack",
  "message",
  "_fileName",
]
`;

exports[`Test \`FileNotFoundError\` own keys 5`] = `
Array [
  "stack",
  "message",
  "_fileName",
]
`;

exports[`Test \`FileNotFoundError\` own keys 6`] = `
Array [
  "stack",
  "message",
  "_fileName",
]
`;
